--- a/client/views/widgetView.html
+++ b/client/views/widgetView.html
@@ -2,13 +2,33 @@
 
 
 
-<form>
 
-	<div ng-controller='widgetController.js'>
 
-	<h1>Test</h1>
+	<div ng-controller='widgetController'>
+
+	
+	<form ng-submit='submit()'>
+
+		<div class="form-group">
+			<label> Loan Amount </label>
+			<input class='campaignName' type='text' value= '' ng-model='user.amount'/>
+		</div>
+
+		<div class="form-group">
+			<label> Interest Rate </label>
+			<input class='campaignName' type='text' value= '' ng-model='user.interest'/> {{user.interest}}
+		</div>
+
+		<div class="form-group">
+			<label> Loan Period </label>
+			<input class='campaignName' type='text' value= '' ng-model='user.loanPeriod'/>
+
+			<button class= 'submitButton' type='submit' ng-click='submit()'>SUBMIT</button>
+		</div>
+	</form>
+
+	<div linear-chart chart-data="salesData"></div>
 
 
 	</div>
 
-</form>
