--- a/client/views/widgetView.html
+++ b/client/views/widgetView.html
@@ -27,7 +27,7 @@
 		</div>
 	</form>
 
-	<div linear-chart chart-data="salesData"></div>
+	<div linear-chart chart-data="loanData"></div>
 
 
 	</div>
