--- a/client/views/widgetView.html
+++ b/client/views/widgetView.html
@@ -7,11 +7,11 @@
 	<div ng-controller='widgetController'>
 
 	
-	<form ng-submit='submit()'>
+	<form>
 
 		<div class="form-group">
 			<label> Loan Amount </label>
-			<input class='campaignName' type='text' value= '' ng-model='user.amount'/>
+			<input class='campaignName' type='text' ng-change= submit(amount) ng-model='amount'/> {{amount}}
 		</div>
 
 		<div class="form-group">
@@ -23,11 +23,15 @@
 			<label> Loan Period </label>
 			<input class='campaignName' type='text' value= '' ng-model='user.loanPeriod'/>
 
-			<button class= 'submitButton' type='submit' ng-click='submit()'>SUBMIT</button>
+			<button class= 'submitButton' type='submit' ng-click='submit(amount)'>SUBMIT</button>
 		</div>
 	</form>
 
-	<div linear-chart chart-data="loanData"></div>
+	<!-- <div linear-chart chart-data="loanData"></div> -->
+	    <div class="my-chart">
+      <linechart data="data" options="options"></linechart>
+    </div>
+
 
 
 	</div>
