--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -7,11 +7,19 @@ $blue: #04a3f9;
   h2 {
   	color: $blue;
   	font-size: 20px;
+  	font-family: 'Raleway', sans-serif;
   	} 
 }
 
+h1 {
+  	color: $blue;
+  	font-size: 40px;
+  	font-family: 'Raleway', sans-serif;
+  	} 
+
+
 table {
-    font-family: arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -33,8 +41,8 @@ tr:nth-child(even) {
 	width: 280px; 
 	float:left; 
 	height:400px; 
-	 
 	margin:30px;
+	font-family: 'Raleway', sans-serif;
 
 }
 
@@ -58,6 +66,7 @@ tr:nth-child(even) {
     background-color: white; 
     color: black; 
     border: 2px solid #4CAF50;
+    font-family: 'Raleway', sans-serif;
 }
 
 .submitButton:hover {
@@ -69,10 +78,36 @@ tr:nth-child(even) {
 	float: left;
 	margin-top: 50px;
 	width: 800px;
+	font-family: 'Raleway', sans-serif;
 }
 
 .chart {
 	width: 800px !important
 }
+
+/*navigation*/
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    font-family: 'Raleway', sans-serif;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
 
 
