--- a/client/views/widgetView.html
+++ b/client/views/widgetView.html
@@ -1,8 +1,22 @@
 
 
-	<div ng-controller='widgetController'>
+	<div>
 
-	
+	<div class='navigation'>
+  <div class="logo">
+    <h1><a href="/#/">Loan.Plotter!</a></h1>
+  </div>
+  <div class="nav">
+    <nav>
+      <ul>
+        <li><a href="/#/">Sign In</a></li>
+        <li><a href="/#/">Welcome</a></li>
+        <li><a href="/#/">About</a></li>
+        <li><a href="/#/">Sign Out</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
 	<form class="submitForm">
 
 		<div class="form-group">
@@ -25,9 +39,8 @@
 			<input class='campaignName' type='text' ng-model='scholarship'/>
 		</div>
 
-			<button class= 'submitButton' type='submit' ng-click='submit(amount,loanPeriod,interest,scholarship)'>SUBMIT</button>
+			<button class= 'submitButton' type='submit' ng-click='ctrl.submit(amount,loanPeriod,interest,scholarship)'>SUBMIT</button>
 	</form>
-	
 
 	<div class='interestTable'>
 
@@ -56,9 +69,9 @@
 	  </table>
 	</div>
 
-	<!-- <div linear-chart chart-data="loanData"></div> -->
+	<!-- CHART -->
 	    <div class="my-chart">
-      <linechart data="data" options="options"></linechart>
+      <linechart data="ctrl.data" options="ctrl.options"></linechart>
     </div>
 
 
