--- a/client/views/widgetView.html
+++ b/client/views/widgetView.html
@@ -1,37 +1,34 @@
 
 
-	<div>
-
+<div>
+	<!-- navbar -->
 	<div class='navigation'>
-  <div class="logo">
-    <h1><a href="/#/">Loan.Plotter!</a></h1>
-  </div>
+		<h1><a href="/#/">Loan.Plotter>></a><span class='blurb'>Plot Your Future Today!</span></h1>
   <div class="nav">
     <nav>
       <ul>
-        <li><a href="/#/">Sign In</a></li>
-        <li><a href="/#/">Welcome</a></li>
-        <li><a href="/#/">About</a></li>
-        <li><a href="/#/">Sign Out</a></li>
+        <li><a href="#/aboutPage">About</a></li>
+        <li><a href="#/comingSoon">Coming Soon</a></li>
       </ul>
     </nav>
   </div>
-</div>
+	</div>
+	<!-- Loan Submit Form -->
 	<form class="submitForm">
 
 		<div class="form-group">
 			<label> Loan Amount </label>
-			<input class='campaignName' type='text' ng-model='amount'/> {{amount}}
+			<input class='campaignName' type='text' ng-model='amount'/>
 		</div>
 
 		<div class="form-group">
 			<label> Interest Rate </label>
-			<input class='campaignName' type='text' ng-model='interest'/> {{interest}}
+			<input class='campaignName' type='text' ng-model='interest'/>
 		</div>
 
 		<div class="form-group">
 			<label> Loan Period </label>
-			<input class='campaignName' type='text' ng-model='loanPeriod'/> {{loanPeriod}}
+			<input class='campaignName' type='text' ng-model='loanPeriod'/>
 		</div>
 
 		<div class="form-group">
@@ -43,8 +40,8 @@
 	</form>
 
 	<div class='interestTable'>
-
-		<h2>Current Interest Rates </h2>
+	<!-- interest rate table  -->
+		<h2>Current Student Interest Rates </h2>
 		<table style="width:25%">
 		  <tr>
 		    <th>Type</th>
@@ -70,11 +67,9 @@
 	</div>
 
 	<!-- CHART -->
-	    <div class="my-chart">
-      <linechart data="ctrl.data" options="ctrl.options"></linechart>
-    </div>
+  <div class="my-chart">
+    <linechart data="ctrl.data" options="ctrl.options"></linechart>
+  </div>
 
-
-
-	</div>
+</div>
 
