about page info update

--- a/client/views/aboutPage.html
+++ b/client/views/aboutPage.html
@@ -6,6 +6,7 @@
 	<h2> Loan Plotter </h2>
 	<h3> Planting Your Future Today </h3>
 	<p> Loan Plotter is a widget that allows you to input your loan data, and see a data visualization of your loan and it's payments over time. 
+	</br> Enter your own interest rate, or choose from one of the provided current rates. The chart will adjust accordingly.
 	</p>
 
 </div>
